[gd_scene load_steps=7 format=3 uid="uid://d3q7qlol4wnfp"]

[ext_resource type="Script" path="res://entities/projectiles/projectiles_scripts/default_enemy_laser.gd" id="1_reim5"]
[ext_resource type="AudioStream" uid="uid://dtcu8y1svt22a" path="res://assets/audio/effects/enemy_laser.wav" id="2_8gqao"]
[ext_resource type="Texture2D" uid="uid://bh4o5e8lutt1u" path="res://assets/textures/projectiles/enemy_default_laser.png" id="3_135ps"]
[ext_resource type="PackedScene" uid="uid://c3atqdge540t0" path="res://components/status/hitbox_component.tscn" id="3_ptfmk"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_jewc2"]
radius = 4.0
height = 20.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_43gnj"]
radius = 4.0

[node name="DefaultEnemyLaser" type="Area2D"]
top_level = true
light_mask = 2
collision_layer = 8
script = ExtResource("1_reim5")

[node name="ProjectileSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("2_8gqao")
bus = &"Effects"

[node name="LaserSprite" type="Sprite2D" parent="."]
position = Vector2(1.13687e-13, 5.68434e-14)
scale = Vector2(1.44869, 1.6)
texture = ExtResource("3_135ps")

[node name="SelfHitbox" type="CollisionShape2D" parent="."]
visible = false
rotation = 1.5708
shape = SubResource("CapsuleShape2D_jewc2")
disabled = true

[node name="OutsideScreenCheck" type="VisibleOnScreenNotifier2D" parent="."]
position = Vector2(-67, 0)
scale = Vector2(0.3, 0.55)

[node name="HitboxComponent" parent="." instance=ExtResource("3_ptfmk")]
collision_layer = 8

[node name="SelfProjectileBox" type="CollisionShape2D" parent="HitboxComponent"]
rotation = -1.5708
shape = SubResource("CapsuleShape2D_43gnj")
debug_color = Color(0.588235, 0.537255, 0.301961, 0.419608)

[connection signal="screen_entered" from="OutsideScreenCheck" to="." method="_on_screen_entered"]
[connection signal="screen_exited" from="OutsideScreenCheck" to="." method="_on_outside_screen_check_exit_detected"]
[connection signal="area_entered" from="HitboxComponent" to="." method="_on_hitbox_area_entered"]
